# LinearTV

./: IRC_text.py  README.md  SQLexecute.py  TVconstants.py  TVdatabase.py  TVdownloader.py  TVpreparer.py  TVstreamer.py  TVtracker.py  app.py  chat.py  config.json  gunicorn_config.py  helper.py  htmx_partials.py  metadatafetcher.py  programmanager.py  pyproject.toml  requirements.txt  stream_app.py  test.py  tvconstants.py  tvdatabase.py  tvdownloader.py  tvhandler.py  tvpreparer.py  tvstreamer.py
data/: tv.db
scripts/: IRC_text.py  tvpreparer.py
static/: package-lock.json  package.json
static/fonts/: DIGILFS_.TTF:Zone.Identifier  PLANK___.TTF:Zone.Identifier  excelates.ttf:Zone.Identifier
static/img/: 2TUPO5FF6STUCLW75EZEJ43PJFNK5NPT.gif:Zone.Identifier  2XUIFC46U4CFAQBCAZVIZI7XWM7G5OO3.gif:Zone.Identifier  32D6JGRSGRVGNGHAOI3WODU7OMVNR43Y.gif:Zone.Identifier  362DFFF4N25ZL6XEZFOFKM2EVL5CT4IV.gif:Zone.Identifier  (+28 more)
templates/: admin.html  admin_panel.html  admin_preparer.html  admin_schedule.html  admin_schedule.py  annet.html  base.html  buttons.py  chat.html  forms.py  html_base.py  index.html  info.html  links.html  mtv.html  program_forms.py  schedule.html  schedule.py  stream_html.py  test_panel.html  tv.html  tvguide.html  tvstream.html
tests/: database_test.py
tvcore/: SQLexecute.py  broadcastmonitor.py  calendar.py  filehandler.py  helper.py  mediapathmanager.py  metadatafetcher.py  nrkmanager.py  programmanager.py  schemas.py  tvconfig.py  tvconstants.py  tvdatabase.py  tvdownloader.py  tvhandler.py  tvstreamer.py  tvtracker.py
(+20 files in other folders)
